
5.16 2011-01-10 Gregory Nutt <spudmonkey@racsa.co.cr>

	* include/nuttx/usb -- Created new directory.  Moved all usb-related header
	  files to this new directory.  Created a skeleton for a new USB host header
	  file
	* drivers/usbhost -- Add USB host "registry" where connect devices can be
	  matched with the correct USB class driver.
	* arc/arc/src/lpc17xx/lpc17_usbhost.c -- Add a simple USB host driver for
	  the NXP lpc17xx.
	* drivers/usbhost -- Add generic USB device enumeration logic.
	* drivers/usbhost -- Add a USB host class driver for the (Bulk-Only) USB
	  Mass Storage Class.

5.17 2011-01-19 Gregory Nutt <spudmonkey@racsa.co.cr>

	* include/nuttx/usb -- rename usb_storage.h to storage.h.
	* arch/arm/src/lpc17xx/lpc17_usbhost.c -- Add support for low-speed devices.
	* drivers/usbhost/usbhost_skeleton.c -- Template for new class drivers
	* include/nuttx/usb/hid.h and drivers/usbhost/usbhost_hidkbd.c -- New
	  files for HID keyboard support.
	* arch/arm/src/lpc17xx/lpc17_usbhost.c -- Will now handle multiple
	  concurrent transfers on different endpoints (still only one TD per
	  endpoint).  All methods are protected from re-entrancy; lots of re-
	  structuring in preparation for interrupt endpoint support.
	* arch/arm/src/lpc17xx/lpc17_usbhost.c -- Add support for periodic
	  interrupt transfers.
	* examples/hidkbd - Added a simple test for the USB host HID keyboard
	  class driver.
	* configs/olimex-lpc1766stk/hidkbd - Added a configuration to build the
	  USB host HID keyboard class driver test for the LPC17xx.
	* Ran the tool CppCheck (http://sourceforge.net/apps/mediawiki/cppcheck) and
	  fixed several errors in the code identified by the tool.

5.18 2011-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>

	* Incorporate several uIP patches from http://gitweb.aeruder.net/?p=uip.git;a=summary.
	  - Lost SYNACK causes connection reset
	  - Fix missing UDP stats for sent/received packets
	  - Added support for Cygwin as development/test platform.