@@ -1,7 +1,7 @@
 ##############################################################################
 # configs/olimex-strp711/ostest/Make.defs
 #
-#   Copyright (C) 2008-2009 Gregory Nutt. All rights reserved.
+#   Copyright (C) 2008-2009, 2011 Gregory Nutt. All rights reserved.
 #   Author: Gregory Nutt <spudmonkey@racsa.co.cr>
 #
 # Redistribution and use in source and binary forms, with or without
@@ -51,7 +51,7 @@ NM			= $(CROSSDEV)nm
 OBJCOPY			= $(CROSSDEV)objcopy
 OBJDUMP			= $(CROSSDEV)objdump
 
-HOSTOS			=  ${shell uname -o}
+HOSTOS			=  ${shell uname -o 2>/dev/null || echo "Other"}
 
 ARCHCCVERSION		= ${shell $(CC) -v 2>&1 | sed -n '/^gcc version/p' | sed -e 's/^gcc version \([0-9\.]\)/\1/g' -e 's/[-\ ].*//g' -e '1q'}
 ARCHCCMAJOR		= ${shell echo $(ARCHCCVERSION) | cut -d'.' -f1}
