@@ -1,7 +1,7 @@
 ############################################################################
 # configs/sim/nsh/Make.defs
 #
-#   Copyright (C) 2008 Gregory Nutt. All rights reserved.
+#   Copyright (C) 2008, 2011 Gregory Nutt. All rights reserved.
 #   Author: Gregory Nutt <spudmonkey@racsa.co.cr>
 #
 # Redistribution and use in source and binary forms, with or without
@@ -35,7 +35,7 @@
 
 include ${TOPDIR}/.config
 
-HOSTOS			= ${shell uname -o}
+HOSTOS			= ${shell uname -o 2>/dev/null || echo "Other"}
 
 ifeq ($(CONFIG_DEBUG_SYMBOLS),y)
   ARCHOPTIMIZATION	= -g
